test/test_error_locations/test_ppx_css_misparse_location.mlt
open! Core
module Virtual_dom = Fake_ppx_css_runtime_for_native_tests
open Virtual_dom;;

#print_line_numbers true

let x : Virtual_dom.Vdom.Attr.t =
  {%css|

.b { 

background-color: tomato;

.background: yellow  ;




}


|}
;;

[%%expect
  {|
Line 14, characters 12-13:
Error: Error while parsing pseudoclass selector. Expected an identifier or function but got WHITESPACE
|}]

let x : Virtual_dom.Vdom.Attr.t =
  [%css
    {|




      .b {

background-color: tomato;

.background: yellow;


      }



|}]
;;

[%%expect
  {|
Line 42, characters 12-13:
Error: Error while parsing pseudoclass selector. Expected an identifier or function but got WHITESPACE
|}]

module Style =
  [%css
  stylesheet
    {|






.background {
    background-color: tomato;

    .background: tomato;

};


|}]

[%%expect
  {|
Line 71, characters 16-17:
Error: Error while parsing pseudoclass selector. Expected an identifier or function but got WHITESPACE
|}]

let single_line = {%css|.background-color: tomato;|}

[%%expect
  {|
Line 84, characters 42-43:
Error: Error while parsing pseudoclass selector. Expected an identifier or function but got WHITESPACE
|}]
